--- a/index.html
+++ b/index.html
@@ -8,11 +8,15 @@
   <body>
     <header>
       <nav>
-        <a href="./index.html">Web Studio</a>
+        <a href="./index.html">Web Studio
+        </a>
         <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+          <li><a href="./index.html">Studio
+          </a></li>
+          <li><a href="./index.html">Portfolio
+          </a></li>
+          <li><a href="./index.html">Contacts
+          </a></li>
       </nav>
       <address>
         <ul>
@@ -49,7 +53,42 @@ problem to walk away with the perfect and creative solution. </p>
             </li>
         </ul>
       </section>
+      <h2>Our Team</h2>
+      <ul>
+        <li>
+            <img src="./images/taste-img-1.jpg" alt="Mark Guerrero"
+            width="206" height="160"/> 
+            <h3>Mark Guerrero
+Product Designer</h3>
+        </li>
+        <li>
+            <img src="./images/taste-img-2.jpg" alt="Tom Ford"
+            width="206" height="160"/>
+            <h3>Tom Ford
+Frontend Developer</h3>
+        </li>
+        <li>
+            <img src="./images/taste-img-3.jpg" alt="Camila Garcia"
+            width="206" height="160"/>
+            <h3>Camila Garcia
+Marketing</h3>
+        </li>
+        <li>
+            <img src="./images/taste-img-4.jpg" alt="Daniel Wilson"
+            width="206" height="160"/>
+            <h3>Daniel Wilson
+UI Designer</h3>
+</li>
+      </ul>
     </main>
-    <footer></footer>
+    <section>
+    </section>
+    <footer>
+      <h2>
+        Web Studio
+      </h2>
+     <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.
+     </p>
+    </footer>
   </body>
 </html>
